H-3537: Add interface to read resolved entity type schemas (#5594)
