# apps/hash-graph/libs/api/openapi/openapi.json
@@ -1657,7 +1657,7 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "./models/status.json"
+                  "$ref": "#/components/schemas/Status"
                 }
               }
             }
@@ -1667,7 +1667,7 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "./models/status.json"
+                  "$ref": "#/components/schemas/Status"
                 }
               }
             }
@@ -1677,7 +1677,7 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "./models/status.json"
+                  "$ref": "#/components/schemas/Status"
                 }
               }
             }
@@ -1894,7 +1894,7 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "./models/status.json"
+                  "$ref": "#/components/schemas/Status"
                 }
               }
             }
@@ -1904,7 +1904,7 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "./models/status.json"
+                  "$ref": "#/components/schemas/Status"
                 }
               }
             }
@@ -1914,7 +1914,7 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "./models/status.json"
+                  "$ref": "#/components/schemas/Status"
                 }
               }
             }
@@ -3088,6 +3088,15 @@
         "type": "string",
         "format": "uri"
       },
+      "ClosedDataType": {
+        "$ref": "./models/closed_data_type.json"
+      },
+      "ClosedEntityType": {
+        "$ref": "./models/closed_entity_type.json"
+      },
+      "ClosedMultiEntityType": {
+        "$ref": "./models/closed_multi_entity_type.json"
+      },
       "ClosedMultiEntityTypeMap": {
         "type": "object",
         "required": [
@@ -3101,7 +3110,7 @@
             }
           },
           "schema": {
-            "$ref": "./models/closed_multi_entity_type.json"
+            "$ref": "#/components/schemas/ClosedMultiEntityType"
           }
         }
       },
@@ -3259,12 +3268,12 @@
           "schema": {
             "oneOf": [
               {
-                "$ref": "./models/data_type.json"
+                "$ref": "#/components/schemas/DataType"
               },
               {
                 "type": "array",
                 "items": {
-                  "$ref": "./models/data_type.json"
+                  "$ref": "#/components/schemas/DataType"
                 }
               }
             ]
@@ -3360,12 +3369,12 @@
           "schema": {
             "oneOf": [
               {
-                "$ref": "./models/entity_type.json"
+                "$ref": "#/components/schemas/EntityType"
               },
               {
                 "type": "array",
                 "items": {
-                  "$ref": "./models/entity_type.json"
+                  "$ref": "#/components/schemas/EntityType"
                 }
               }
             ]
@@ -3396,12 +3405,12 @@
           "schema": {
             "oneOf": [
               {
-                "$ref": "./models/property_type.json"
+                "$ref": "#/components/schemas/PropertyType"
               },
               {
                 "type": "array",
                 "items": {
-                  "$ref": "./models/property_type.json"
+                  "$ref": "#/components/schemas/PropertyType"
                 }
               }
             ]
@@ -3412,6 +3421,9 @@
       "CreatedById": {
         "type": "string",
         "format": "uuid"
+      },
+      "DataType": {
+        "$ref": "./models/data_type.json"
       },
       "DataTypeMetadata": {
         "oneOf": [
@@ -3613,7 +3625,7 @@
             "$ref": "#/components/schemas/DataTypeMetadata"
           },
           "schema": {
-            "$ref": "./models/data_type.json"
+            "$ref": "#/components/schemas/DataType"
           }
         }
       },
@@ -4271,6 +4283,9 @@
         },
         "additionalProperties": false
       },
+      "EntityType": {
+        "$ref": "./models/entity_type.json"
+      },
       "EntityTypeEditorSubject": {
         "oneOf": [
           {
@@ -4632,6 +4647,34 @@
           "propertyName": "relation"
         }
       },
+      "EntityTypeResolveDefinitions": {
+        "type": "object",
+        "required": [
+          "dataTypes",
+          "propertyTypes",
+          "entityTypes"
+        ],
+        "properties": {
+          "dataTypes": {
+            "type": "object",
+            "additionalProperties": {
+              "$ref": "#/components/schemas/ClosedDataType"
+            }
+          },
+          "entityTypes": {
+            "type": "object",
+            "additionalProperties": {
+              "$ref": "#/components/schemas/PartialEntityType"
+            }
+          },
+          "propertyTypes": {
+            "type": "object",
+            "additionalProperties": {
+              "$ref": "#/components/schemas/PropertyType"
+            }
+          }
+        }
+      },
       "EntityTypeSetting": {
         "type": "string",
         "enum": [
@@ -4707,7 +4750,7 @@
             "$ref": "#/components/schemas/EntityTypeMetadata"
           },
           "schema": {
-            "$ref": "./models/entity_type.json"
+            "$ref": "#/components/schemas/EntityType"
           }
         }
       },
@@ -5096,6 +5139,9 @@
           "includeDrafts": {
             "type": "boolean"
           },
+          "includeResolved": {
+            "type": "boolean"
+          },
           "temporalAxes": {
             "$ref": "#/components/schemas/QueryTemporalAxesUnresolved"
           }
@@ -5108,8 +5154,15 @@
           "entityType"
         ],
         "properties": {
+          "definitions": {
+            "allOf": [
+              {
+                "$ref": "#/components/schemas/EntityTypeResolveDefinitions"
+              }
+            ]
+          },
           "entityType": {
-            "$ref": "./models/closed_multi_entity_type.json"
+            "$ref": "#/components/schemas/ClosedMultiEntityType"
           }
         }
       },
@@ -5260,9 +5313,6 @@
           "filter": {
             "$ref": "#/components/schemas/Filter"
           },
-          "includeClosedMultiEntityTypes": {
-            "type": "boolean"
-          },
           "includeCount": {
             "type": "boolean"
           },
@@ -5274,6 +5324,14 @@
           },
           "includeEditionCreatedByIds": {
             "type": "boolean"
+          },
+          "includeEntityTypes": {
+            "allOf": [
+              {
+                "$ref": "#/components/schemas/IncludeEntityTypeOption"
+              }
+            ],
+            "nullable": true
           },
           "includeTypeIds": {
             "type": "boolean"
@@ -5330,6 +5388,13 @@
               }
             ],
             "nullable": true
+          },
+          "definitions": {
+            "allOf": [
+              {
+                "$ref": "#/components/schemas/EntityTypeResolveDefinitions"
+              }
+            ]
           },
           "editionCreatedByIds": {
             "type": "object",
@@ -5389,9 +5454,6 @@
           "graphResolveDepths": {
             "$ref": "#/components/schemas/GraphResolveDepths"
           },
-          "includeClosedMultiEntityTypes": {
-            "type": "boolean"
-          },
           "includeCount": {
             "type": "boolean"
           },
@@ -5403,6 +5465,14 @@
           },
           "includeEditionCreatedByIds": {
             "type": "boolean"
+          },
+          "includeEntityTypes": {
+            "allOf": [
+              {
+                "$ref": "#/components/schemas/IncludeEntityTypeOption"
+              }
+            ],
+            "nullable": true
           },
           "includeTypeIds": {
             "type": "boolean"
@@ -5459,6 +5529,13 @@
               }
             ],
             "nullable": true
+          },
+          "definitions": {
+            "allOf": [
+              {
+                "$ref": "#/components/schemas/EntityTypeResolveDefinitions"
+              }
+            ]
           },
           "editionCreatedByIds": {
             "type": "object",
@@ -5589,9 +5666,6 @@
           "filter": {
             "$ref": "#/components/schemas/Filter"
           },
-          "includeClosed": {
-            "type": "boolean"
-          },
           "includeCount": {
             "type": "boolean"
           },
@@ -5600,6 +5674,14 @@
           },
           "includeEditionCreatedByIds": {
             "type": "boolean"
+          },
+          "includeEntityTypes": {
+            "allOf": [
+              {
+                "$ref": "#/components/schemas/IncludeEntityTypeOption"
+              }
+            ],
+            "nullable": true
           },
           "includeWebIds": {
             "type": "boolean"
@@ -5624,7 +5706,7 @@
           "closedEntityTypes": {
             "type": "array",
             "items": {
-              "$ref": "./models/closed_entity_type.json"
+              "$ref": "#/components/schemas/ClosedEntityType"
             }
           },
           "count": {
@@ -5639,6 +5721,13 @@
               }
             ],
             "nullable": true
+          },
+          "definitions": {
+            "allOf": [
+              {
+                "$ref": "#/components/schemas/EntityTypeResolveDefinitions"
+              }
+            ]
           },
           "editionCreatedByIds": {
             "type": "object",
@@ -5839,6 +5928,13 @@
           }
         },
         "additionalProperties": false
+      },
+      "IncludeEntityTypeOption": {
+        "type": "string",
+        "enum": [
+          "closed",
+          "resolved"
+        ]
       },
       "InferredEntityProvenance": {
         "type": "object",
@@ -6128,7 +6224,7 @@
                 }
               },
               "schema": {
-                "$ref": "./models/data_type.json"
+                "$ref": "#/components/schemas/DataType"
               }
             }
           }
@@ -6164,7 +6260,7 @@
                 }
               },
               "schema": {
-                "$ref": "./models/entity_type.json"
+                "$ref": "#/components/schemas/EntityType"
               }
             }
           }
@@ -6200,7 +6296,7 @@
                 }
               },
               "schema": {
-                "$ref": "./models/property_type.json"
+                "$ref": "#/components/schemas/PropertyType"
               }
             }
           }
@@ -6927,6 +7023,9 @@
         "type": "string",
         "format": "uuid"
       },
+      "PartialEntityType": {
+        "$ref": "./models/partial_entity_type.json"
+      },
       "PatchEntityParams": {
         "type": "object",
         "required": [
@@ -7241,6 +7340,9 @@
         },
         "additionalProperties": false
       },
+      "PropertyType": {
+        "$ref": "./models/property_type.json"
+      },
       "PropertyTypeEditorSubject": {
         "oneOf": [
           {
@@ -7553,7 +7655,7 @@
             "$ref": "#/components/schemas/PropertyTypeMetadata"
           },
           "schema": {
-            "$ref": "./models/property_type.json"
+            "$ref": "#/components/schemas/PropertyType"
           }
         }
       },
@@ -7952,6 +8054,9 @@
           "document"
         ]
       },
+      "Status": {
+        "$ref": "./models/status.json"
+      },
       "Subgraph": {
         "type": "object",
         "required": [
@@ -8138,6 +8243,9 @@
           }
         }
       },
+      "UpdateDataType": {
+        "$ref": "./models/update_data_type.json"
+      },
       "UpdateDataTypeEmbeddingParams": {
         "type": "object",
         "required": [
@@ -8187,7 +8295,7 @@
             }
           },
           "schema": {
-            "$ref": "./models/update_data_type.json"
+            "$ref": "#/components/schemas/UpdateDataType"
           },
           "typeToUpdate": {
             "$ref": "#/components/schemas/VersionedUrl"
@@ -8225,6 +8333,9 @@
           }
         },
         "additionalProperties": false
+      },
+      "UpdateEntityType": {
+        "$ref": "./models/update_entity_type.json"
       },
       "UpdateEntityTypeEmbeddingParams": {
         "type": "object",
@@ -8268,13 +8379,16 @@
             }
           },
           "schema": {
-            "$ref": "./models/update_entity_type.json"
+            "$ref": "#/components/schemas/UpdateEntityType"
           },
           "typeToUpdate": {
             "$ref": "#/components/schemas/VersionedUrl"
           }
         },
         "additionalProperties": false
+      },
+      "UpdatePropertyType": {
+        "$ref": "./models/update_property_type.json"
       },
       "UpdatePropertyTypeEmbeddingParams": {
         "type": "object",
@@ -8318,7 +8432,7 @@
             }
           },
           "schema": {
-            "$ref": "./models/update_property_type.json"
+            "$ref": "#/components/schemas/UpdatePropertyType"
           },
           "typeToUpdate": {
             "$ref": "#/components/schemas/VersionedUrl"
